--- a/index.html
+++ b/index.html
@@ -51,9 +51,9 @@
 						<ul class="ob">
 							<li>
 								<p>Reuniones en español</p>
-								<p>Segundo y cuarto jueves de cada mes a las 19:30 UTC-3</p>
-								<p>+54 11 </p>
-								<p><a href="mailto:@oradoresbaires.com.ar">@oradoresbaires.com.ar</a> </p>
+								<p>Segundo y cuarto jueves de cada mes a las 20:30 UTC-3</p>
+								<p><a href="https://api.whatsapp.com/send?phone=">Whatsapp</a></p>
+								<p><a href="mailto:presidente@oradoresbaires.com.ar">presidente@oradoresbaires.com.ar</a> </p>
 								<p><a href="www.oradoresbaires.com.ar">www.oradoresbaires.com.ar</a> </p>
 							</li>
 						</ul>
