Tamaño fuente mail OB fix

--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
 								<p>Reuniones en español</p>
 								<p>Segundo y cuarto jueves de cada mes a las 20:30 UTC-3</p>
 								<p><a href="https://api.whatsapp.com/send?phone=">Whatsapp</a></p>
-								<p><a href="mailto:presidente@oradoresbaires.com.ar">presidente@oradoresbaires.com.ar</a> </p>
+								<p><a href="mailto:presidente@oradoresbaires.com.ar" class="mail">presidente@oradoresbaires.com.ar</a> </p>
 								<p><a href="www.oradoresbaires.com.ar">www.oradoresbaires.com.ar</a> </p>
 							</li>
 						</ul>
