--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
 								<p>Segundo y cuarto jueves de cada mes a las 20:30 UTC-3</p>
 								<p><a href="https://api.whatsapp.com/send?phone=">Whatsapp</a></p>
 								<p><a href="mailto:presidente@oradoresbaires.com.ar" class="mail">presidente@oradoresbaires.com.ar</a> </p>
-								<p><a href="www.oradoresbaires.com.ar">www.oradoresbaires.com.ar</a> </p>
+								<p><a href="https://oradoresbaires.com.ar">oradoresbaires.com.ar</a> </p>
 							</li>
 						</ul>
 					</li>
@@ -66,7 +66,7 @@
 									<p>First and third Thursday of every month at 7.30 p.m. UTC-3</p>
 									<p><a href="https://t.me/ToastmastersMG">Telegram chat group</a> </p>
 									<p><a href="mailto:contact@toastmastersmg.ar">contact@toastmastersmg.ar</a> </p>
-									<p><a href="www.toastmastersmg.ar">www.toastmastersmg.ar</a> </p>
+									<p><a href="https://toastmastersmg.ar">toastmastersmg.ar</a> </p>
 								</li>
 							</ul>
 					</li>
