Mensaje OB inactivo

--- a/index.html
+++ b/index.html
@@ -50,11 +50,12 @@
 						<h4>Club Oradores Baires</h4>
 						<ul class="ob">
 							<li>
-								<p>Reuniones en español</p>
+								<del><p>Reuniones en español</p> <!-- Quitar <del></del> cuando OB vuelva a estar operativo -->
 								<p>Segundo y cuarto jueves de cada mes a las 20:30 UTC-3</p>
 								<p><a href="https://api.whatsapp.com/send?phone=">Whatsapp</a></p>
 								<p><a href="mailto:presidente@oradoresbaires.com.ar" class="mail">presidente@oradoresbaires.com.ar</a> </p>
-								<p><a href="https://oradoresbaires.com.ar">oradoresbaires.com.ar</a> </p>
+								<p><a href="https://oradoresbaires.com.ar">oradoresbaires.com.ar</a> </p></del>
+								<p><b>CLUB INACTIVO POR EL MOMENTO</b></p>
 							</li>
 						</ul>
 					</li>
