Meta descripcion modif y orden de listado clubes alternado

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 	<meta name="viewport" content="user-scalable=0, width=device-width, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
 	<title>Toastmasters Argentina</title>
     <meta name="author" content="Maximo Jose Tomasella Vedoya" />
-    <meta name="description" content="Clubes de Toastmasters International en Argentina"/>
+    <meta name="description" content="Clubes abiertos a todo el público de Toastmasters International en Argentina - Morris Gellman club reuniones en Ingles, 1er y 3er jueves a las 19:30 Argentina"/>
     <meta name="keywords" content="Toastmasters, Morris Gellman, Oradores Baires, Argentina, Buenos Aires, clubes, clubs, oratoria, liderazgo, discursos, speech, leadership, Morris Hellman" />
 	<link rel="stylesheet" type="text/css" href="css/style.css">
 	<link rel="stylesheet" type="text/css" href="css/mobile.css">
@@ -40,34 +40,32 @@
 -->
 	</div>
 	<div id="body">
-<!--
-		<h2>Clubes / Clubs</h2>
--->
+		<h2>Clubes en Argentina:</h2>
 		<div class="content">
 			<div>
 				<ul class="section">
 					<li>
-						<h4>Club Oradores Baires</h4>
-						<ul class="ob">
+						<h4>Morris Gellman Club</h4>
+						<ul class="mg">
 							<li>
-								<del><p>Reuniones en español</p> <!-- Quitar <del></del> cuando OB vuelva a estar operativo -->
-								<p>Segundo y cuarto jueves de cada mes a las 20:30 UTC-3</p>
-								<p><a href="https://api.whatsapp.com/send?phone=">Whatsapp</a></p>
-								<p><a href="mailto:presidente@oradoresbaires.com.ar" class="mail">presidente@oradoresbaires.com.ar</a> </p>
-								<p><a href="https://oradoresbaires.com.ar">oradoresbaires.com.ar</a> </p></del>
-								<p><b>CLUB INACTIVO POR EL MOMENTO</b></p>
+								<p>English meetings</p>
+								<p>First and third Thursday of every month at 7.30 p.m. UTC-3</p>
+								<p><a href="https://t.me/ToastmastersMG">Telegram chat group</a></p>
+								<p><a href="mailto:contact@toastmastersmg.ar">contact@toastmastersmg.ar</a> </p>
+								<p><a href="https://toastmastersmg.ar">toastmastersmg.ar</a> </p>
 							</li>
 						</ul>
 					</li>
 					<li>
-						<h5>Morris Gellman Club</h5>
-						<ul class="mg">
+						<h5>Club Oradores Baires</h5>
+						<ul class="ob">
 								<li>
-									<p>English meetings</p>
-									<p>First and third Thursday of every month at 7.30 p.m. UTC-3</p>
-									<p><a href="https://t.me/ToastmastersMG">Telegram chat group</a> </p>
-									<p><a href="mailto:contact@toastmastersmg.ar">contact@toastmastersmg.ar</a> </p>
-									<p><a href="https://toastmastersmg.ar">toastmastersmg.ar</a> </p>
+									<del><p>Reuniones en español</p> <!-- Quitar <del></del> cuando OB vuelva a estar operativo -->
+									<p>Segundo y cuarto jueves de cada mes a las 20:30 UTC-3</p>
+									<p><a href="https://api.whatsapp.com/send?phone=">Whatsapp</a> </p>
+									<p><a href="mailto:presidente@oradoresbaires.com.ar" class="mail">presidente@oradoresbaires.com.ar</a> </p>
+									<p><a href="https://oradoresbaires.com.ar">oradoresbaires.com.ar</a> </p></del>
+									<p><b>CLUB INACTIVO POR EL MOMENTO</b></p>
 								</li>
 							</ul>
 					</li>
