Added info about prospect Spanish club

--- a/index.html
+++ b/index.html
@@ -57,15 +57,14 @@
 						</ul>
 					</li>
 					<li>
-						<h5>Club Oradores Baires</h5>
+						<h5>Prospecto a Club en Español</h5>
 						<ul class="ob">
 								<li>
-									<del><p>Reuniones en español</p> <!-- Quitar <del></del> cuando OB vuelva a estar operativo -->
-									<p>Segundo y cuarto jueves de cada mes a las 20:30 UTC-3</p>
-									<p><a href="https://api.whatsapp.com/send?phone=">Whatsapp</a> </p>
-									<p><a href="mailto:presidente@oradoresbaires.com.ar" class="mail">presidente@oradoresbaires.com.ar</a> </p>
-									<p><a href="https://oradoresbaires.com.ar">oradoresbaires.com.ar</a> </p></del>
-									<p><b>CLUB INACTIVO POR EL MOMENTO</b></p>
+									<p>Reuniones en español</p>
+									<p>Fecha y horario a confirmar</p>
+									<p><a href="https://t.ly/u3yr3">Whatsapp Comunidad Argentina</a> </p>
+									<p><a href="mailto:https://gaggle.email/join/spa-meetings_area-arg-uru-py@gaggle.email" class="mail">Formulario a la lista de emails</a> </p>
+									<p><a href="https://www.facebook.com/toastmastersarg/">Facebook TM en Argentina</a> </p>
 								</li>
 							</ul>
 					</li>
